<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">心肺功能仪</string>
    <string name="home">首页</string>
    <string name="personal">我的</string>
    <string name="newS">最新</string>
    <string name="setting">设置</string>
    <string name="queryDatabase">查询数据库</string>
    <string name="name">请输入用户名</string>
    <string name="user">姓名</string>
    <string name="pass">请输入密码</string>
    <string name="submit">登 录</string>
    <string name="send">发送</string>
    <string name="connect">连接</string>
    <string name="cardiopulmonary">心肺测试</string>
    <string name="minute_walk">六分钟步行测试</string>
    <string name="patientInformation">患者管理</string>
    <string name="registration">注 册</string>
    <string name="entry_name">便携式心肺功能测试系统</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="close">退出</string>
    <string name="gender">性别</string>
    <string name="select_name_number">请输入病历号或者姓名进行查询</string>
    <string name="record_number">病历号</string>
    <string name="height">身高(cm)</string>
    <string name="bodyWeight">体重(kg)</string>
    <string name="identification_number">身份证号</string>
    <string name="birthday">生日</string>
    <string name="age">年龄</string>
    <string name="bmi">BMI</string>
    <string name="predictDistances">预测距离</string>
    <string name="diseaseHistory">病史</string>
    <string name="currentMedications">目前用药</string>
    <string name="remark">备注</string>
    <string name="clinicalDiagnosis">临床诊断</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="add">新增</string>
    <string name="patient_list">患者列表</string>
    <string name="create_time">创建时间</string>
    <string name="operation">操作</string>
    <string name="report_no">报告编号</string>
    <string name="testTime">测试时间</string>
    <string name="assess">评估</string>
    <string name="exercise_lung_test">运动肺测试</string>
    <string name="maximumVentilation">最大通气量</string>
    <string name="forcedVitalCapacity">用力肺活量</string>
    <string name="conventionalVentilation">常规肺活量</string>
    <string name="cardiopulmonary_records">心肺测试记录</string>
    <string name="six_records">六分钟步行测试记录</string>
    <string name="system_setting">系统设置</string>
    <string name="save">保存</string>
    <string name="report_number">报告编号</string>
    <string name="hospital_settings">医院设置</string>
    <string name="hospital_name">医院名称</string>
    <string name="dynamic_settings">动态肺设置</string>
    <string name="static_setting">静态肺设置</string>
    <string name="general_settings">通用设置</string>
    <string name="hospital_name_mao">医院名称：</string>
    <string name="login_pass_mao">登陆密码:</string>
    <string name="_123456789">123456789</string>
    <string name="update_pass">修改密码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="export_passwords">导出密码:</string>
    <string name="test_parameters">测试参数</string>
    <string name="data_backup">数据备份/还原</string>
    <string name="data_backup_">数据备份</string>
    <string name="data_restoration">数据还原</string>
    <string name="device_management">设备管理</string>
    <string name="ECG">心电仪：</string>
    <string name="device_overhaul">设备检修</string>
    <string name="ml">毫升(ML)</string>
    <string name="assessment_process">评估流程</string>
    <string name="report_shows">报告显示</string>
    <string name="exercise_prescription">运动处方</string>
    <string name="cpet">CPET设置</string>
    <string name="unit">单位</string>
    <string name="vital_capacity">呼气肺活量</string>
    <string name="svc">svc</string>
    <string name="chines_name">中文名</string>
    <string name="metricValues">指标值</string>
    <string name="di_displayed">是否显示</string>
    <string name="svc_setting">SVC设置</string>
    <string name="x_time">X轴时间量程：</string>
    <string name="min_s">秒(s)</string>
    <string name="y_time_up">Y轴时间上限：</string>
    <string name="y_time_down">Y轴时间下限：</string>
    <string name="vt_base_line">VT基线：</string>
    <string name="display">显示</string>
    <string name="display_no">不显示</string>
    <string name="begin">开始</string>
    <string name="stop">停止</string>
    <string name="environmental_calibration">环境定标</string>
    <string name="calibrationMethod">标定方式</string>
    <string name="atmosphericPressure">气压(mmHg)</string>
    <string name="ambientAirPressure">环境气压</string>
    <string name="calibrationTime">定标时间</string>
    <string name="temperature">温度(℃)</string>
    <string name="humidity">湿度(%)</string>
    <string name="flow">流量定标</string>
    <string name="flow_handle">流量手动定标</string>
    <string name="flow_auto">流量自动定标</string>
    <string name="Inspiratory_calibration">吸气标定指标</string>
    <string name="pull">拉</string>
    <string name="ingredient_calibration">成分定标</string>
    <string name="o_t90_ms">T90(ms)</string>
    <string name="ingredientCalibration">成分定标</string>
    <string name="dataTables">数据表格</string>
    <string-array name="spinner_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        
    </string-array>
    <string-array name="spScenarios_items">
        <item>Zapletal</item>
        <item>Eccs</item>
        <item>Wasserman</item>
        <item>Cherniak</item>
        <item>Jaeger</item>
        <item>Fixed</item>
    </string-array>
    <string-array name="spBreathing_items">
        <item>硅胶面罩(特大)</item>
        <item>硅胶面罩(小)</item>
        <item>硅胶面罩(中)</item>
        <item>硅胶面罩</item>
    </string-array>
    <string name="ambulatoryLungTest">动态肺测试</string>
    <string name="routine">常规</string>
    <string name="wasserman_9">Wasserman-9</string>
    <string name="data">数据</string>
    <string name="tranquility">静息</string>
    <string name="warm_up">热身</string>
    <string name="motion">运动</string>
    <string name="recover">恢复</string>
    <string name="motorAssessment">运动评估</string>
    <string name="reset">重置</string>
    <string name="data_tables">数据表格</string>
    <string name="staticLungTest">静态肺测试</string>
    <string name="maxiVentilation">分钟最大通气量</string>
    <string name="onekey_calibration_guide_content"><![CDATA[<font color="#000000"><Big><b>开始前请确认设备已连接:</b></Big></font> <br><br>1.请确认流量传感器已正确连接到流量定标口。<br>2.请确认气瓶管路已正确连接到后方的输入口，并且气阀已打开。<br>3.请确认采样管已连接到成分定标接口。]]></string>
    <string name="device_without_connection_tips">设备未连接!!!</string>
    <string name="sixmin_measure_blood">测量\n血压</string>
    <string name="sixmin_measuring_blood">测量\n中</string>
    <string name="sixmin_blood_pressure_yes">血压已连接</string>
    <string name="sixmin_blood_pressure_no">血压未连接</string>
    <string name="sixmin_blood_oxygen_yes">血氧已连接</string>
    <string name="sixmin_blood_oxygen_no">血氧未连接</string>
    <string name="sixmin_ecg_yes">心电已连接</string>
    <string name="sixmin_ecg_no">心电未连接</string>
    <string name="sixmin_start">开始</string>
    <string name="sixmin_stop">停止</string>
    <string name="sixmin_circle_count">计圈</string>
    <string name="sixmin_blood_pressure_high">收缩压</string>
    <string name="sixmin_blood_pressure_low">舒张压</string>
    <string name="sixmin_blood_pressure_front">运动前</string>
    <string name="sixmin_blood_pressure_behind">运动后</string>
    <string name="sixmin_system_setting_alarm">&#160;&#160;报警设置&#160;&#160;</string>
    <string name="sixmin_system_setting_other">&#160;&#160;其它设置&#160;&#160;</string>
    <string name="sixmin_system_setting_password">&#160;&#160;密码修改&#160;&#160;</string>
    <string name="sixmin_system_setting_bluetooth">&#160;&#160;蓝牙设置&#160;&#160;</string>
    <string name="sixmin_system_setting_info">&#160;&#160;系统信息&#160;&#160;</string>
    <string name="sixmin_system_setting_systolic_pressure_alarm">收缩压报警值</string>
    <string name="sixmin_system_setting_systolic_pressure_alarm_prefix">收缩压大于</string>
    <string name="sixmin_system_setting_diastolic_pressure_alarm">舒张压报警值</string>
    <string name="sixmin_system_setting_diastolic_pressure_alarm_prefix">舒张压大于</string>
    <string name="sixmin_system_setting_heartbeat_alarm">心率报警值</string>
    <string name="sixmin_system_setting_heartbeat_alarm_prefix">心率大于</string>
    <string name="sixmin_system_setting_blood_oxygen_alarm">血氧报警值</string>
    <string name="sixmin_system_setting_blood_oxygen_alarm_prefix">饱和度小于</string>
    <string name="sixmin_system_setting_blood_pressure_unit">mmHg</string>
    <string name="sixmin_system_setting_heartbeat_unit">bpm</string>
    <string name="sixmin_system_setting_blood_oxygen_unit">spo2%</string>
    <string name="sixmin_system_setting_circle_method">计圈方式</string>
    <string name="sixmin_system_setting_circle_auto">自动\n计圈</string>
    <string name="sixmin_system_setting_circle_handle">手动\n计圈</string>
    <string name="sixmin_system_setting_end_user">使用单位:</string>
    <string name="sixmin_system_setting_area_length">场地长度:</string>
    <string name="sixmin_system_setting_area_length_unit">米</string>
    <string name="sixmin_system_setting_broadcast_guidance_voice">是否播报引导语音:</string>
    <string name="sixmin_system_setting_ecg_lead_type">心电导联类型:</string>
    <string name="sixmin_system_setting_auto_mearsure_blood">是否自动测量血压:</string>
    <string name="sixmin_system_setting_position_of_trolley">台车摆放位置:</string>
    <string name="sixmin_system_setting_position_of_trolley_middle">居中</string>
    <string name="sixmin_system_setting_position_of_trolley_start">起始</string>
    <string name="sixmin_system_setting_auto_start_test">是否自动开始试验:</string>
    <string name="sixmin_system_setting_steps_or_breath">步数/呼吸率:</string>
    <string name="sixmin_system_setting_steps_or_breath_steps">步数</string>
    <string name="sixmin_system_setting_steps_or_breath_breath">呼吸率</string>
    <string name="sixmin_system_setting_show_rest_time">是否显示休息时长:</string>
    <string name="sixmin_system_setting_check_yes">是</string>
    <string name="sixmin_system_setting_check_no">否</string>
    <string name="sixmin_system_setting_check_confirm">确认</string>
    <string name="sixmin_system_setting_check_cancel">取消</string>
    <string name="sixmin_system_setting_export_pwd">原密码:</string>
    <string name="sixmin_system_setting_modify_pwd">新密码:</string>
    <string name="sixmin_system_setting_confirm_pwd">确认密码:</string>
    <string name="sixmin_system_setting_bluetooth_ecg">心电蓝牙</string>
    <string name="sixmin_system_setting_bluetooth_blood">血压蓝牙</string>
    <string name="sixmin_system_setting_bluetooth_blood_oxygen">血氧蓝牙</string>
    <string name="sixmin_test_title">六分钟步行检测</string>
    <string name="sixmin_test_testing">试验中</string>
    <string name="sixmin_test_patient_info_height">身高:</string>
    <string name="sixmin_test_patient_info_sex">性别:</string>
    <string name="sixmin_test_patient_info_age">年龄:</string>
    <string name="sixmin_test_patient_info_name">姓名:</string>
    <string name="sixmin_test_patient_info_weight">体重:</string>
    <string name="sixmin_test_patient_info_bmi">BMI:</string>
    <string name="sixmin_test_circle_count">计圈</string>
    <string name="sixmin_test_circle_count_title">已经进行</string>
    <string name="sixmin_test_circle_count_unit">圈</string>
    <string name="sixmin_test_blood_pressure_begin">运动前血压/mmHg</string>
    <string name="sixmin_test_blood_pressure_after">运动后血压/mmHg</string>
    <string name="sixmin_test_blood_oxygen_title">血氧</string>
    <string name="sixmin_test_ecg_title">心率</string>
    <string name="sixmin_test_report_edit_blood_pressure_title">编辑血压</string>
    <string name="sixmin_test_report_confirm">确定</string>
    <string name="sixmin_test_report_close">关闭</string>
    <string name="sixmin_test_report_edit_blood_pressure_before_test">试验前:</string>
    <string name="sixmin_test_report_edit_blood_pressure_after_test">试验后:</string>
    <string name="sixmin_test_report_edit_blood_pressure_high">收缩压(mmHg)</string>
    <string name="sixmin_test_report_edit_blood_pressure_low">舒张压(mmHg)</string>
    <string name="sixmin_test_report_before_test_status_level">试验前状况评级</string>
</resources>