<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/sixmin_report_title_topradius_bg"
            android:gravity="center"
            android:text="@string/sixmin_test_report_edit_blood_pressure_title"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixmin_test_report_edit_blood_pressure_before_test"
                android:textColor="@color/text3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sixmin_test_report_edit_blood_pressure_high"
                android:textColor="@color/text3" />

            <EditText
                android:id="@+id/sixmin_report_edit_blood_pressure_high_before"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:maxLength="3"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/sixmin_test_report_edit_blood_pressure_low"
                android:textColor="@color/text3" />

            <EditText
                android:id="@+id/sixmin_report_edit_blood_pressure_low_before"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:maxLength="3"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixmin_test_report_edit_blood_pressure_after_test"
                android:textColor="@color/text3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sixmin_test_report_edit_blood_pressure_high"
                android:textColor="@color/text3" />

            <EditText
                android:id="@+id/sixmin_report_edit_blood_pressure_high_after"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:maxLength="3"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/sixmin_test_report_edit_blood_pressure_low"
                android:textColor="@color/text3" />

            <EditText
                android:id="@+id/sixmin_report_edit_blood_pressure_low_after"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:maxLength="3"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sixmin_report_tv_edit_blood_pressure_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sixmin_report_btn_confirm_bg"
                android:paddingHorizontal="50dp"
                android:paddingVertical="10dp"
                android:text="@string/sixmin_test_report_confirm"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/sixmin_report_tv_edit_blood_pressure_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/sixmin_report_btn_close_bg"
                android:paddingHorizontal="50dp"
                android:paddingVertical="10dp"
                android:text="@string/sixmin_test_report_close"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>
</layout>