<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/sixmin_report_title_topradius_bg"
                android:gravity="center"
                android:text="@string/sixmin_test_report_before_test_status_level"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ems="1"
                        android:text="是否佩戴面罩"
                        android:textColor="@color/text3"
                        android:textSize="13sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/sixmin_rb_face_mask_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:buttonTint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/sixmin_system_setting_check_yes"
                            android:textColor="@color/text3"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/sixmin_rb_face_mask_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:buttonTint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/sixmin_system_setting_check_no"
                            android:textColor="@color/text3"
                            android:textSize="12sp" />
                    </RadioGroup>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sixmin_rv_patient_self_check"
                    android:layout_width="450dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="50dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sixmin_report_tv_edit_blood_pressure_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sixmin_report_btn_confirm_bg"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:text="@string/sixmin_test_report_confirm"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/sixmin_report_tv_edit_blood_pressure_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/sixmin_report_btn_close_bg"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:text="@string/sixmin_test_report_close"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>